--- a/README
+++ b/README
@@ -21,7 +21,7 @@ Prerequisites
 
 ### Debian/Ubuntu
 
-Add d-apt sources:
+Add [d-apt](http://d-apt.sourceforge.net/) sources:
 
 ```
 sudo wget http://master.dl.sourceforge.net/project/d-apt/files/d-apt.list \
