--- a/README
+++ b/README
@@ -94,4 +94,9 @@ sudo apt-get install fuse libfuse-dev python-fuse
 python-mutagen
 ```
 
+```
 pip install inotify
+```
+```
+python setup.py sdist
+```
