--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 urchin-fs
 =========
 
+**in-progress**
+
 A FUSE-based filesystem which reads arbitrary metadata
 and presents a faceted-search-style view on the containing directories.
 
